foobar.output
Terminals unused in grammar

   FN
   CHAR
   ALG
   WHEN
   END
   RETURN
   IS
   DO
   IO
   IOFN
   SL
   SR
   BOOL
   TRUE
   FALSE
   SYMBOL
   INTEGER
   COMP
   LOGICAL
   ADDITIVE
   MULTI
   UNARY


Grammar

    0 $accept: exprs $end

    1 exprs: expr
    2      | exprs expr

    3 expr: term '.'
    4     | assign expr
    5     | if expr

    6 term: and_term
    7     | term OR and_term

    8 and_term: comp_term
    9         | and_term AND comp_term

   10 comp_term: add_term
   11          | comp_term comp add_term

   12 comp: EQ
   13     | '<'
   14     | '>'
   15     | LEQ
   16     | NEQ
   17     | GEQ

   18 add_term: mult_term
   19         | mult_term '+' add_term
   20         | mult_term '-' add_term

   21 mult_term: unary_term
   22          | unary_term '*' mult_term
   23          | unary_term '/' mult_term

   24 unary_term: invocation
   25           | '-' unary_term
   26           | NOT unary_term

   27 invocation: primary
   28           | invocation '(' expr_list ')'

   29 expr_list: opt_expr
   30          | expr_list ',' opt_expr

   31 opt_expr: expr
   32         | /* empty */

   33 primary: literal
   34        | var
   35        | '(' expr ')'
   36        | undef_var

   37 undef_var: typename var

   38 typename: ANY
   39         | INT
   40         | FLOAT
   41         | STRING
   42         | ARRAY
   43         | LIST
   44         | TABLE
   45         | TYPENAME

   46 literal: INT_LITERAL
   47        | FLOAT_LITERAL
   48        | STRING_LITERAL
   49        | CHAR_LITERAL

   50 var: ID

   51 assign: var '=' expr

   52 if: IF term THEN expr ELSE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 28 35
')' (41) 28 35
'*' (42) 22
'+' (43) 19
',' (44) 30
'-' (45) 20 25
'.' (46) 3
'/' (47) 23
'<' (60) 13
'=' (61) 51
'>' (62) 14
error (256)
FN (258)
INT (259) 39
FLOAT (260) 40
CHAR (261)
STRING (262) 41
ARRAY (263) 42
TABLE (264) 44
ALG (265)
WHEN (266)
END (267)
IF (268) 52
THEN (269) 52
ANY (270) 38
RETURN (271)
IS (272)
DO (273)
IO (274)
IOFN (275)
LIST (276) 43
SL (277)
SR (278)
LEQ (279) 15
GEQ (280) 17
EQ (281) 12
NEQ (282) 16
OR (283) 7
AND (284) 9
NOT (285) 26
ELSE (286) 52
BOOL (287)
TRUE (288)
FALSE (289)
ID (290) 50
SYMBOL (291)
TYPENAME (292) 45
STRING_LITERAL (293) 48
FLOAT_LITERAL (294) 47
INT_LITERAL (295) 46
CHAR_LITERAL (296) 49
INTEGER (297)
COMP (298)
LOGICAL (299)
ADDITIVE (300)
MULTI (301)
UNARY (302)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
exprs (60)
    on left: 1 2, on right: 0 2
expr (61)
    on left: 3 4 5, on right: 1 2 4 5 31 35 51 52
term (62)
    on left: 6 7, on right: 3 7 52
and_term (63)
    on left: 8 9, on right: 6 7 9
comp_term (64)
    on left: 10 11, on right: 8 9 11
comp (65)
    on left: 12 13 14 15 16 17, on right: 11
add_term (66)
    on left: 18 19 20, on right: 10 11 19 20
mult_term (67)
    on left: 21 22 23, on right: 18 19 20 22 23
unary_term (68)
    on left: 24 25 26, on right: 21 22 23 25 26
invocation (69)
    on left: 27 28, on right: 24 28
expr_list (70)
    on left: 29 30, on right: 28 30
opt_expr (71)
    on left: 31 32, on right: 29 30
primary (72)
    on left: 33 34 35 36, on right: 27
undef_var (73)
    on left: 37, on right: 36
typename (74)
    on left: 38 39 40 41 42 43 44 45, on right: 37
literal (75)
    on left: 46 47 48 49, on right: 33
var (76)
    on left: 50, on right: 34 37 51
assign (77)
    on left: 51, on right: 4
if (78)
    on left: 52, on right: 5


State 0

    0 $accept: . exprs $end
    1 exprs: . expr
    2      | . exprs expr
    3 expr: . term '.'
    4     | . assign expr
    5     | . if expr
    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   51 assign: . var '=' expr
   52 if: . IF term THEN expr ELSE

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    IF              shift, and go to state 6
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    exprs       go to state 18
    expr        go to state 19
    term        go to state 20
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 31
    assign      go to state 32
    if          go to state 33


State 1

   39 typename: INT .

    $default  reduce using rule 39 (typename)


State 2

   40 typename: FLOAT .

    $default  reduce using rule 40 (typename)


State 3

   41 typename: STRING .

    $default  reduce using rule 41 (typename)


State 4

   42 typename: ARRAY .

    $default  reduce using rule 42 (typename)


State 5

   44 typename: TABLE .

    $default  reduce using rule 44 (typename)


State 6

    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   52 if: IF . term THEN expr ELSE

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    term        go to state 34
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 35


State 7

   38 typename: ANY .

    $default  reduce using rule 38 (typename)


State 8

   43 typename: LIST .

    $default  reduce using rule 43 (typename)


State 9

   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   26           | NOT . unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    unary_term  go to state 36
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 35


State 10

   50 var: ID .

    $default  reduce using rule 50 (var)


State 11

   45 typename: TYPENAME .

    $default  reduce using rule 45 (typename)


State 12

   48 literal: STRING_LITERAL .

    $default  reduce using rule 48 (literal)


State 13

   47 literal: FLOAT_LITERAL .

    $default  reduce using rule 47 (literal)


State 14

   46 literal: INT_LITERAL .

    $default  reduce using rule 46 (literal)


State 15

   49 literal: CHAR_LITERAL .

    $default  reduce using rule 49 (literal)


State 16

   24 unary_term: . invocation
   25           | . '-' unary_term
   25           | '-' . unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    unary_term  go to state 37
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 35


State 17

    3 expr: . term '.'
    4     | . assign expr
    5     | . if expr
    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   35        | '(' . expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   51 assign: . var '=' expr
   52 if: . IF term THEN expr ELSE

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    IF              shift, and go to state 6
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    expr        go to state 38
    term        go to state 20
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 31
    assign      go to state 32
    if          go to state 33


State 18

    0 $accept: exprs . $end
    2 exprs: exprs . expr
    3 expr: . term '.'
    4     | . assign expr
    5     | . if expr
    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   51 assign: . var '=' expr
   52 if: . IF term THEN expr ELSE

    $end            shift, and go to state 39
    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    IF              shift, and go to state 6
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    expr        go to state 40
    term        go to state 20
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 31
    assign      go to state 32
    if          go to state 33


State 19

    1 exprs: expr .

    $default  reduce using rule 1 (exprs)


State 20

    3 expr: term . '.'
    7 term: term . OR and_term

    OR   shift, and go to state 41
    '.'  shift, and go to state 42


State 21

    6 term: and_term .  [THEN, OR, '.']
    9 and_term: and_term . AND comp_term

    AND  shift, and go to state 43

    $default  reduce using rule 6 (term)


State 22

    8 and_term: comp_term .  [THEN, OR, AND, '.']
   11 comp_term: comp_term . comp add_term
   12 comp: . EQ
   13     | . '<'
   14     | . '>'
   15     | . LEQ
   16     | . NEQ
   17     | . GEQ

    LEQ  shift, and go to state 44
    GEQ  shift, and go to state 45
    EQ   shift, and go to state 46
    NEQ  shift, and go to state 47
    '<'  shift, and go to state 48
    '>'  shift, and go to state 49

    $default  reduce using rule 8 (and_term)

    comp  go to state 50


State 23

   10 comp_term: add_term .

    $default  reduce using rule 10 (comp_term)


State 24

   18 add_term: mult_term .  [THEN, LEQ, GEQ, EQ, NEQ, OR, AND, '.', '<', '>']
   19         | mult_term . '+' add_term
   20         | mult_term . '-' add_term

    '+'  shift, and go to state 51
    '-'  shift, and go to state 52

    $default  reduce using rule 18 (add_term)


State 25

   21 mult_term: unary_term .  [THEN, LEQ, GEQ, EQ, NEQ, OR, AND, '.', '<', '>', '+', '-']
   22          | unary_term . '*' mult_term
   23          | unary_term . '/' mult_term

    '*'  shift, and go to state 53
    '/'  shift, and go to state 54

    $default  reduce using rule 21 (mult_term)


State 26

   24 unary_term: invocation .  [THEN, LEQ, GEQ, EQ, NEQ, OR, AND, '.', '<', '>', '+', '-', '*', '/']
   28 invocation: invocation . '(' expr_list ')'

    '('  shift, and go to state 55

    $default  reduce using rule 24 (unary_term)


State 27

   27 invocation: primary .

    $default  reduce using rule 27 (invocation)


State 28

   36 primary: undef_var .

    $default  reduce using rule 36 (primary)


State 29

   37 undef_var: typename . var
   50 var: . ID

    ID  shift, and go to state 10

    var  go to state 56


State 30

   33 primary: literal .

    $default  reduce using rule 33 (primary)


State 31

   34 primary: var .  [LEQ, GEQ, EQ, NEQ, OR, AND, '.', '<', '>', '+', '-', '*', '/', '(']
   51 assign: var . '=' expr

    '='  shift, and go to state 57

    $default  reduce using rule 34 (primary)


State 32

    3 expr: . term '.'
    4     | . assign expr
    4     | assign . expr
    5     | . if expr
    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   51 assign: . var '=' expr
   52 if: . IF term THEN expr ELSE

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    IF              shift, and go to state 6
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    expr        go to state 58
    term        go to state 20
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 31
    assign      go to state 32
    if          go to state 33


State 33

    3 expr: . term '.'
    4     | . assign expr
    5     | . if expr
    5     | if . expr
    6 term: . and_term
    7     | . term OR and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID
   51 assign: . var '=' expr
   52 if: . IF term THEN expr ELSE

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    IF              shift, and go to state 6
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    expr        go to state 59
    term        go to state 20
    and_term    go to state 21
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 31
    assign      go to state 32
    if          go to state 33


State 34

    7 term: term . OR and_term
   52 if: IF term . THEN expr ELSE

    THEN  shift, and go to state 60
    OR    shift, and go to state 41


State 35

   34 primary: var .

    $default  reduce using rule 34 (primary)


State 36

   26 unary_term: NOT unary_term .

    $default  reduce using rule 26 (unary_term)


State 37

   25 unary_term: '-' unary_term .

    $default  reduce using rule 25 (unary_term)


State 38

   35 primary: '(' expr . ')'

    ')'  shift, and go to state 61


State 39

    0 $accept: exprs $end .

    $default  accept


State 40

    2 exprs: exprs expr .

    $default  reduce using rule 2 (exprs)


State 41

    7 term: term OR . and_term
    8 and_term: . comp_term
    9         | . and_term AND comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    and_term    go to state 62
    comp_term   go to state 22
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 35


State 42

    3 expr: term '.' .

    $default  reduce using rule 3 (expr)


State 43

    9 and_term: and_term AND . comp_term
   10 comp_term: . add_term
   11          | . comp_term comp add_term
   18 add_term: . mult_term
   19         | . mult_term '+' add_term
   20         | . mult_term '-' add_term
   21 mult_term: . unary_term
   22          | . unary_term '*' mult_term
   23          | . unary_term '/' mult_term
   24 unary_term: . invocation
   25           | . '-' unary_term
   26           | . NOT unary_term
   27 invocation: . primary
   28           | . invocation '(' expr_list ')'
   33 primary: . literal
   34        | . var
   35        | . '(' expr ')'
   36        | . undef_var
   37 undef_var: . typename var
   38 typename: . ANY
   39         | . INT
   40         | . FLOAT
   41         | . STRING
   42         | . ARRAY
   43         | . LIST
   44         | . TABLE
   45         | . TYPENAME
   46 literal: . INT_LITERAL
   47        | . FLOAT_LITERAL
   48        | . STRING_LITERAL
   49        | . CHAR_LITERAL
   50 var: . ID

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    STRING          shift, and go to state 3
    ARRAY           shift, and go to state 4
    TABLE           shift, and go to state 5
    ANY             shift, and go to state 7
    LIST            shift, and go to state 8
    NOT             shift, and go to state 9
    ID              shift, and go to state 10
    TYPENAME        shift, and go to state 11
    STRING_LITERAL  shift, and go to state 12
    FLOAT_LITERAL   shift, and go to state 13
    INT_LITERAL     shift, and go to state 14
    CHAR_LITERAL    shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17

    comp_term   go to state 63
    add_term    go to state 23
    mult_term   go to state 24
    unary_term  go to state 25
    invocation  go to state 26
    primary     go to state 27
    undef_var   go to state 28
    typename    go to state 29
    literal     go to state 30
    var         go to state 35


State 44

   15 comp: LEQ .

    $default  reduce using rule 15 (comp)


State 45

   17 comp: GEQ .

    $default  reduce using rule 17 (comp)


State 46

   12 comp: EQ .

    $default  reduce using rule 12 (comp)


State 47

   16 comp: NEQ .

    $default  reduce using rule 16 (comp)


State 48

   13 comp: '<' .

    $default  reduce using rule 13 (comp)


State 49

   14 comp: '>' .

    $default  reduce using rule 14 (comp)


State 50
